--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
-RewriteBase /
+RewriteBase /my-vite-app/
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.html [L]
+RewriteRule . /my-vite-app/index.html [L]
