--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo",
-  "homepage": "/DEMO/",
+  "homepage": "https://chamberoflearning.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
